// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialInputScreen renders correctly in login mode 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 25,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "maxHeight": 480,
        "maxWidth": 360,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      value="foo@bar.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Component
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <Connect(GoogleAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Google"
      />
      <Connect(FacebookAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Facebook"
      />
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly in sign up mode 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 25,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "maxHeight": 480,
        "maxWidth": 360,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign up for Civic
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      value="foo@bar.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      value="password"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder="Re-type password"
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Component
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <Connect(GoogleAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Google"
      />
      <Connect(FacebookAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Facebook"
      />
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Have an account? Sign in
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly when loading 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 25,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "maxHeight": 480,
        "maxWidth": 360,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      value="email@email.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Component
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <Connect(GoogleAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Google"
      />
      <Connect(FacebookAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Facebook"
      />
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly with form error 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 25,
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "maxHeight": 480,
        "maxWidth": 360,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      value=""
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#eb5757",
          "fontSize": 16,
          "paddingBottom": 4,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    >
      Email required
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Component
      style={
        Object {
          "marginTop": 20,
        }
      }
    >
      <Connect(GoogleAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Google"
      />
      <Connect(FacebookAuthButton)
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 8,
            "marginLeft": 0,
            "marginRight": 0,
            "width": "100%",
          }
        }
        title="Continue with Facebook"
      />
    </Component>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;
